# seq66

./: .gitignore  ChangeLog  INSTALL  INSTALL.seq66.on.Ubuntu.md  INSTALL4Ubuntu.md  Install.seq66.on.Ubuntu.md  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  RELNOTES  RELNOTES.md  ROADMAP.md  TODO  VERSION  autogen.sh  bootstrap  bootstrap.help  configure  configure.ac  configure.help  excludes  meson.build  meson.mingw.cross  meson.mingw.native  meson.msys.cross  meson.options  modules-to-compare.txt  pack  packages  seq66.pro  work.sh
Seq66cli/: Makefile.am  Makefile.in  Seq66cli.pro  meson.build  seq66rtcli.cpp
Seq66qt5/: Makefile.am  Makefile.in  Seq66qt5.pro  meson.build  qt5nsmanager.cpp  qt5nsmanager.hpp  seq66qt5.cpp
Seqtool/forms/: Makefile.am  Makefile.in  qtestframe.ui
Seqtool/include/: Makefile.am  Makefile.in  converter.hpp  faker.hpp  gdk_basic_keys.hpp  midi_control_helpers.hpp  midi_control_unit_test.hpp  optionsfile.hpp  qtcore_task.hpp  qtestframe.hpp  unit_tests.hpp  util_unit_test.hpp
data/: GM_DD-11.drums  GM_PSS-790.drums  Makefile.am  Makefile.in  README  b4uacuse-gm-patchless.midi  license.text  license.txt  meson.build  qseq66-lp-mini-8x8.ctrl  qseq66-lp-mini.ctrl  qseq66.ctrl  qseq66.mutes  qseq66.rc  qseq66.usr  readme.text  readme.txt  readme.windows  rowclipsmap.ctrl  rowclipsmap.mutes  rowclipsmap.rc  sample.playlist
data/linux/: alsa_ports.rc  ca_ports.rc  jack_ports.rc  macros-APC40-mk2.ctrl  macros-MMC.ctrl  macros-launchpad-mini.ctrl  macros-launchpad-pro-mk3.ctrl  qseq66-alt-gray.palette  qseq66-azerty-fr.keymap  qseq66-azerty.ctrl  qseq66-default.palette  qseq66-gray.palette  qseq66-lp-mini-8x8.ctrl  qseq66-lp-mini-alt.ctrl  qseq66-lp-mini-swapped.ctrl  qseq66-lp-mini.ctrl  qseq66-portmap.rc  qseq66-qwerty-us.keymap  qseq66-qwerty-us.keys  qseq66-swapped.ctrl  qseq66.ctrl  qseq66.drums  qseq66.mutes  qseq66.palette  qseq66.playlist  qseq66.rc  qseq66.usr  seq66.desktop.in  startjack  startqjack
data/midi/: 16-blank-patterns.midi  Carpet_of_the_Sun.text  Chameleon-HHancock-Ov.midi  EE-qsynth-presets.conf  If_You_Could_Read_My_Mind.mid  Kraftwerk-Europe_Endless-reconstructed.midi  Kraftwerk-Europe_Endless.asc  Kraftwerk-Europe_Endless.text  Peter_Gunn-reconstructed.midi  Peter_Gunn.text  README  b4uacufm.mid  b4uacuse-gm-patchless.midi  carptsun-4.midi  carptsun.midi  colours.midi  metro.midi
data/samples/: GM.patches  GM_DD-11.drums  GM_PSS-790.drums  GM_PSS-790.patches  GM_PSS-790_Multi.ini  PSS-790.patches  ca_midi.playlist  dark-gradient.qss  flat-rounded.qss  font-fix.qss  green.palette  green.qss  grey-ghost.qss  incrypt-66.palette  incrypt-66.qss  monogreen.palette  monogreen.qss  nanomap.ctrl  perstfic-66.palette  perstfic-66.qss  qseq66-sample.palette  qseq66.qss  rowclipsmap.ctrl  rowclipsmap.mutes  rowclipsmap.rc  sample.playlist  sample.usr  session.rc  sessions.rc  textfix.qss
data/seq66cli/: seq66cli.ctrl  seq66cli.drums  seq66cli.mutes  seq66cli.playlist  seq66cli.rc  seq66cli.usr
data/testing/: mapping-snippet.rc  simple-test.notemap  sixteen-ports-snippet.rc
data/win/: dark-theme.qss  qpseq66.ctrl  qpseq66.drums  qpseq66.mutes  qpseq66.palette  qpseq66.playlist  qpseq66.rc  qpseq66.usr  qseq66-lp-mini-8x8.ctrl  win_midi.playlist
data/wrk/: longhair.midi
doc/: Makefile.am  Makefile.in  README  control_keys.ods  launchpad-mini.ods  meson.build
doc/dia/: libseq66-headers.dia  rtbusses.dia  rtjack_init.dia
doc/dox/: Makefile.am  Makefile.in  doxy-common.cfg  make-helper  make_dox  optimize
doc/latex/: Makefile  Makefile-helper  Makefile.am  Makefile.in  README  make_pdf.sh  meson.build
include/: config.h.in  meson.build  seq66-config.h.in  seq66-git-version.h.in
include/cli/: seq66-config.h
libseq66/: Makefile.am  Makefile.in  README  libseq66.pro  meson.build
libseq66/include/: Makefile.am  Makefile.in  app_limits.h  base64_images.hpp  function_calls_gnu.h  main_impl.hpp  meson.build  seq66_features.h  seq66_features.hpp  seq66_platform_macros.h
libseq66/src/: Makefile.am  Makefile.in  function_calls_gnu.c  main_impl.cpp  meson.build  seq66_features.cpp
libsessions/: Makefile.am  Makefile.in  libsessions.pro  meson.build
libsessions/include/: Makefile.am  Makefile.in  meson.build
libsessions/src/: Makefile.am  Makefile.in  meson.build
m4/: Makefile.am  Makefile.in  ax_have_qt.m4  ax_have_qt_clang.m4  ax_have_qt_ex.m4  ax_have_qt_min.m4  seq64_mingw_dll.m4  xpc_debug.m4
man/: Makefile.am  Makefile.in  seq66.1  seq66cli.1  sequencer66.1
nsis/: MesonSetup.nsi  README  Seq66Constants.nsh  Seq66Setup.nsi  build_debug_code.bat  build_release_package.bat  meson.build  winddeploybruteforce.bat  x64.nsh
resources/: meson.build  seq66_win.rc
resources/icons/: route66.xpm
resources/pixmaps/: Makefile.am  Makefile.in  SEQ66_24x24.xpm  drum_mode.xpm  exp_rec_on.xpm  expandgrid.xpm  filter_off.xpm  filter_on.xpm  finger.xpm  grow.xpm  hex_off.xpm  hex_on.xpm  hide.xpm  length_red.xpm  length_short_inv.xpm  menu_empty_inv.xpm  menu_full_inv.xpm  meson.build  metro.xpm  metro_on.xpm  n_rec_on.xpm  note_length_inv.xpm  numbers_off.xpm  numbers_on.xpm  panic2.xpm  pause.xpm  play_on.xpm  q_rec.xpm  q_rec_on.xpm  quantize_inv.xpm  rec_ex_buss.xpm  rec_ex_channel.xpm  rec_ex_normal.xpm  rec_on.xpm  right.xpm  route66.xpm  route66rwb-32x32.xpm  route66rwb-66x66.xpm  scale.xpm  seq.xpm  (+13 more)
seq_portmidi/: Makefile.am  Makefile.in  README  meson.build  seq_portmidi.pro
seq_portmidi/include/: Makefile.am  Makefile.in  easy_macros.h  finddefault.h  mastermidibus_pm.hpp  meson.build  midibus_pm.hpp  pmerrmm.h  pminternal.h  pmlinux.h  pmlinuxalsa.h  pmmac.h  pmmacosxcm.h  pmutil.h  pmwinmm.h  portmidi.h  porttime.h  readbinaryplist.h
seq_portmidi/src/: Makefile.am  Makefile.in  finddefault-macosx.c  finddefault.c  mastermidibus.cpp  meson.build  midibus.cpp  midibus_impl.cpp  pmerrmm.c  pmlinux.c  pmlinuxalsa.c  pmmac.c  pmmacosxcm.c  pmutil.c  pmwin.c  (+8 more)
seq_qt5/: Makefile.am  Makefile.in  README  meson.build  seq_qt5.pro
seq_rtmidi/: Makefile.am  Makefile.in  meson.build  seq_rtmidi.pro
(+917 files in other folders)
